<resources>
    <string name="app_name">Waviot App</string>
    <string name="login_hint">Enter Your Email or phone</string>
    <string name="pass_hint">Enter Your password</string>
    <string name="registration_hint">Registration</string>
    <string name="login_button_hint">Enter</string>
    <string name="registration_request">Don\'t have an account yet?</string>
    <string name="element_name_default">Element name</string>
    <string name="modem_id">Modem\'s id: %1$S</string>
    <string name="serial_number">Serial: %1$d</string>
    <string name="electro_type">Electricity</string>
    <string name="water_type">Water</string>
    <string name="heat_type">Heat</string>
    <string name="gaz_type">Gas</string>
    <string name="go_consumption_button">Consumption</string>
    <string name="last_values_text">Last values of device</string>
    <string name="last_value">last value: %1$S %2$S</string>
    <string name="last_value_ts">Date: %1$S</string>
    <string name="logout">Logout</string>
    <string name="empty_field_error">This field can\'t be empty!</string>
    <string name="surname_hint">Surname</string>
    <string name="surname_helper">Your surname</string>
    <string name="name_hint">Name</string>
    <string name="name_helper">Your name</string>
    <string name="middle_name_hint">Middle name</string>
    <string name="middle_name_helper">Your middle name (if exists)</string>
    <string name="email_hint">Email</string>
    <string name="email_helper">Email will be Your login</string>
    <string name="phone_hint">Phone number</string>
    <string name="phone_helper">Actual phone number</string>
    <string name="password_hint">Pick a password</string>
    <string name="password_helper">Password requires from 6 to 30 symbols</string>
    <string name="rep_password_hint">Confirm the password</string>
    <string name="rep_password_helper">Password again</string>
    <string name="recovery_password_button">Forget password?</string>
    <string name="recovery_alert_text">Password recovery</string>
    <string name="recovery_alert_button_text">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">menu_home</string>
    <string name="devices">Devices</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
</resources>